<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="customer_name_hint">Name</string>

    <!-- Header for topppings [CHAR LIMIT=20] -->
    <string name="toppings">Toppings</string>

    <!-- Checkbox text for whipped cream [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>

    <!-- Checkbox text for chocolate  [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Text for quantity [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Displays numer of coffees that is the default when app opens[CHAR LIMIT=20] -->
    <string name="initial_quantity_value">1</string>

    <string name="decrement_symbol">-</string>
    <string name="increment_symbol">+</string>

    <!-- Text for order [CHAR LIMIT=20] -->
    <string name="order_button">Order</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_input_name">Name: <xliff:g id= "nameInput" example= "Amy">%1$s</xliff:g></string>

    <!--
     Whipped cream topping for the order summary. It will be shown in the format of
     "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
   -->
    <string name="add_whipped_cream">Add whipped cream?<xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>

    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="add_chocolate">Add chocolate?<xliff:g id="hasChocolate" example="true">%b</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="quantity_colon">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="total_colon">Total: $<xliff:g id="price" example="$10">%s</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">JustJava order for <xliff:g id="nameInput" example="Amy">%s</xliff:g></string>
</resources>
